# PaperMarket

./: .gitignore  Cargo.toml  README.md  package.json
apps/api/: .env.example  Cargo.toml
apps/api/src/: errors.rs  main.rs
apps/api/src/blockchain/: chain.rs  contracts.rs  mempool.rs  mod.rs  pow.rs  utxo.rs
apps/api/src/crypto/: bip39.rs  keys.rs  mod.rs  signing.rs
apps/api/src/db/: connection.rs
apps/api/src/db/migrations/: 001_users.sql  002_products.sql  003_transactions.sql  004_blocks.sql  005_contracts.sql
apps/api/src/models/: block.rs  contract.rs  mod.rs  product.rs  transaction.rs  user.rs
apps/api/src/routes/: auth.rs  chain.rs  contracts.rs  marketplace.rs  mining.rs  mod.rs  wallet.rs
apps/api/src/ws/: handler.rs
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
