[workspace]
members = [
    "apps/api",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["PaperMarket Contributors"]
license     = "MIT"
repository  = "https://github.com/seu-usuario/papermarket"

[workspace.dependencies]
# Web
actix-web      = "4"
actix-ws       = "0.3"
actix-cors = "0.7"
tokio          = { version = "1", features = ["full"] }

# Serialização
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Banco de dados
sqlx           = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

# Criptografia
sha2           = "0.10"
secp256k1      = { version = "0.28", features = ["rand", "recovery"] }
hmac           = "0.12"
pbkdf2         = "0.12"
rand           = "0.8"
hex            = "0.4"

# Auth / segurança
argon2         = "0.5"
jsonwebtoken   = "9"
uuid           = { version = "1", features = ["v4"] }

# Utilitários
chrono         = { version = "0.4", features = ["serde"] }
thiserror      = "1"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy        = "0.15"